# copilot-x-cli

./: Cargo.toml  \  readme.md
src/: chat.rs  codeblock_builder.rs  llm.rs  main.rs  syntax.rs
