[package]
name = "copilot-chat-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = { version ="0.11", features = ["json", "stream"]}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
clipboard = "0.5"
clap = "2.33.3"
syntect = "4.2.0"
termion = "1.5.6"
lazy_static = "1.4.0"
